--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -5,12 +5,13 @@
 // General
 $primary: #141C1C;
 $secondary: #FFFFFF;
-$greytwo: #E3E8E8;
+$greytwo: #626E6E;
 $palm: #445D31;
 $slate: #909999;
+$slate-tint: #9baba9;
 // Text
-$headings-color: #282f49;
-$body-color: #7e7e8a;
+$headings-color: #626E6E;
+$body-color: #141C1C;
 
 //
 // Typography
