--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -62,7 +62,7 @@
 		<div class="row footer__footer">
 			<div class="col-lg-6">
 				<div class="footer__footer_copy text-light">
-					<p>Copyright {{ dateFormat "2006" now }} - All Rights Reserved by <a class="text-light" href="https://staticmania.com/" target="_blank">StaticMania</a></p>
+					<p>Copyright {{ dateFormat "2006" now }} - All Rights Reserved <a class="text-light" href="https://staticmania.com/" target="_blank"></a></p>
 				</div>
 			</div>
 			<div class="col-lg-6">
