--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -10,8 +10,11 @@ $palm: #445D31;
 $slate: #909999;
 $slate-tint: #9baba9;
 // Text
-$headings-color: #626E6E;
-$body-color: #141C1C;
+$headings-color: #5e7775;
+$body-color: $secondary;
+
+
+
 
 //
 // Typography
