--- a/assets/scss/components/_footer-section.scss
+++ b/assets/scss/components/_footer-section.scss
@@ -19,11 +19,13 @@
         }
     }
     &__cta {
-        @include mobile {
-            height:1400px
+        @media screen and (min-width: 769px){
+            height:1750px;
+            width:100%;
         }
-        @include desktop {
-            height:1700px
+        @media screen and (max-width: 769px){
+            height:1450px;
+            width:100%;
         }
        
         background: $primary;
