--- a/assets/scss/components/_hero-section.scss
+++ b/assets/scss/components/_hero-section.scss
@@ -5,6 +5,17 @@
   align-items: center;
   justify-content: center;
   background-color: #141C1C;
+
+@media screen and (min-width: 769px){
+  h1 {
+    color: $primary;
+  }
+  p{
+    color: $slate;
+  }
+}
+
+
   @include desktop {
     padding: 150px 0 30px 0;
   }
