--- a/assets/scss/components/_hero-section.scss
+++ b/assets/scss/components/_hero-section.scss
@@ -194,3 +194,29 @@
     transform: translateY(15px);
   }
 }
+
+.modal-dialog {
+  max-width: 800px;
+  margin: 30px auto;
+  @media screen and (max-width: 769px){
+    top:25%;
+  }
+  
+ 
+}
+.modal-body {
+margin: 50;
+position:relative;
+padding:0px;
+width:100%;
+}
+.close {
+position:absolute;
+right:-30px;
+top:0;
+z-index:999;
+font-size:2rem;
+font-weight: normal;
+color:#fff;
+opacity:1;
+}
