--- a/layouts/techs/single.html
+++ b/layouts/techs/single.html
@@ -55,16 +55,41 @@
               <div class="thumb">
                 <img src="{{ .Params.heroVideoThumb| absURL }}" alt="popup" />
               </div>
-  
-              <a href="{{ .Params.heroVideoURL }}" type="button" class="popup-button text-center big">
+              <!--{{ .Params.heroVideoURL }}
+              <a href="" type="button" class="popup-button text-center big">
+              -->
+              <a type="button" class="popup-button text-center big" data-toggle="modal" data-src="{{ .Params.heroVideoURL }}" data-target="#myModal">
                 <svg xmlns="http://www.w3.org/2000/svg" width="21" height="24" viewBox="0 0 21 24">
                   <path d="M17.961 10.264a2 2 0 010 3.473L2.992 22.29A2 2 0 010 20.554V3.446A2 2 0 012.992 1.71z"
                     data-name="Polygon 4" />
                 </svg>
-              </a>
-            </div>
+            
+            </a>
+         
+            
             {{ end }}
           </div>
+          <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+          
+                
+                <div class="modal-body">
+          
+                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>        
+                  <!-- 16:9 aspect ratio -->
+                  <div class="embed-responsive embed-responsive-16by9">
+                  <iframe class="embed-responsive-item" src="{{ .Params.heroVideoURL }}" id="video"  allowfullscreen="true" allowscriptaccess="always" allow="autoplay"></iframe>
+                  </div>
+                    
+                  
+                </div>
+          
+              </div>
+            </div>
+          </div> 
         </div>
       </div>
     </div>
@@ -156,6 +181,35 @@
   </section>
 
 
+<script>
+$(document).ready(function() {
 
+// Gets the video src from the data-src on each button
+
+var $videoSrc;  
+$('.video-btn').click(function() {
+    $videoSrc = $(this).data( "src" );
+});
+console.log($videoSrc);
+
+  
+  
+// when the modal is opened autoplay it  
+$('#myModal').on('shown.bs.modal', function (e) {
+    
+// set the video src to autoplay and not to show related video. Youtube related video is like a box of chocolates... you never know what you're gonna get
+$("#video").attr('src',$videoSrc + "?autoplay=1&amp;modestbranding=1&amp;showinfo=0");
+
+})
+  
+
+
+// stop playing the youtube video when I close the modal
+$('#myModal').on('hide.bs.modal', function (e) {
+    // a poor man's stop video
+    $("#video").attr('src',$videoSrc); 
+}) 
+
+</script>
 
   {{ end }}
