new features section"

--- a/assets/scss/components/_resume-section.scss
+++ b/assets/scss/components/_resume-section.scss
@@ -7,7 +7,7 @@
         padding: 100px 0;
     }
     &__background{
-        background: #1B2031;
+        background: $primary;
         height: 100%;
         width: 100%;
         position: absolute;
@@ -16,6 +16,8 @@
         transform: skewY(-2deg);
     }
     &__heading{
+        
+        color: $primary;
         margin-right: 100px;
         position: sticky;
         position: -webkit-sticky;
@@ -32,12 +34,19 @@
     }
     &__education{
         &_item{
+            h3,h4{
+                color: $primary;
+            }
+            p{
+                color: $slate;
+            }
             background: $white;
             padding: 30px;
             border-radius: 20px;
             margin-bottom: 30px;
             box-shadow: 0px 20px 40px 0px rgba(50, 65, 141, 0.12);
             span{
+                color: $primary;
                 display: block;
                 margin: 0 0 20px 30px;
                 position: relative;
