new form/brand guidelines

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -10,8 +10,8 @@ $palm: #445D31;
 $slate: #909999;
 $slate-tint: #9baba9;
 // Text
-$headings-color: #5e7775;
-$body-color: $secondary;
+$headings-color: $primary;
+$body-color: $primary;
 
 
 
