--- a/assets/scss/components/_hero-section.scss
+++ b/assets/scss/components/_hero-section.scss
@@ -6,27 +6,36 @@
   justify-content: center;
   background-color: #141C1C;
 
-@media screen and (min-width: 769px){
-  h1 {
-    color: $primary;
-  }
-  p{
-    color: $slate;
-  }
-}
+  @media(max-width:800px){
+    h1{
+      color: $secondary;
+    }
+    p{
+      color: $secondary;
+    }
 
+  }
 
   @include desktop {
     padding: 150px 0 30px 0;
+    
   }
+ 
 
   &_background-svg {
+    @media(max-width: 800px){
+      display:none;
+    }
+     
+    
+
     position: absolute;
     top: 0;
     left: 0;
     z-index: 0;
     width: 65%;
     svg {
+     
       width: 100%;
       height: 100%;
     }
@@ -48,6 +57,7 @@
       margin-bottom: 60px;
     }
     .hero_blob {
+      
       position: absolute;
       z-index: -1;
       top: -45%;
