--- a/layouts/techs/single.html
+++ b/layouts/techs/single.html
@@ -162,8 +162,33 @@
           
           
           <div class="footer__cta">
-            <iframe src="{{ .Params.amigoLink}}" width="100%" height="100%" marginheight="0" frameborder="0" border="0" scrolling="auto" onload="autoResize(this);"></iframe>
-          
+
+            <form class="contact-form" id="contact-form"  method="POST">
+              <div class="row justify-content-center">
+                  <div class="form-field col-sm">
+                      <input id="name" class="input-text js-input" placeholder=" " name="name" type="text" required>
+                      <label class="label" for="name">Name*</label>
+                  </div>
+                  <div class="form-field col-sm">
+                      <input id="email" class="input-text js-input" placeholder=" " name="email" type="email" required>
+                      <label class="label" for="email">E-mail*</label>
+                     
+                  </div>
+                  <div class="form-field col-sm">
+                      <input id="phoneNumber" class="input-text js-input" placeholder=" " name="phone" type="tel" minlength="10" maxlength="12" required>
+                      <label class="label" for="phone">Phone*</label>
+                      
+                  </div>
+                  <!-- <div class="g-recaptcha" data-sitekey="6Lec2_gnAAAAAAtP3YgwYG_jG_Sf_FTBA5Dm_vOW"></div> -->
+                  <div class="form-field col-lg-12">
+                      <input id="formspark-url" value="{{ .Params.formsparkURL }}"  type="hidden">
+                      <button id="send-button" class="submit-btn" type="submit" formtarget="_self">Submit</button>
+                      <p id="contact-form-status" class="mt-3" style="display: none;">Form Submitted</p>
+                      
+                  </div>
+              </div>
+          </form>
+           
   
           
             <div class="shape-1">
@@ -232,35 +257,8 @@
   </section>
 
 
-<script>
-$(document).ready(function() {
-
-// Gets the video src from the data-src on each button
-
-var $videoSrc;  
-$('.video-btn').click(function() {
-    $videoSrc = $(this).data( "src" );
-});
-console.log($videoSrc);
-
-  
-  
-// when the modal is opened autoplay it  
-$('#myModal').on('shown.bs.modal', function (e) {
-    
-// set the video src to autoplay and not to show related video. Youtube related video is like a box of chocolates... you never know what you're gonna get
-$("#video").attr('src',$videoSrc + "?autoplay=1&amp;modestbranding=1&amp;showinfo=0");
-
-})
-  
 
 
-// stop playing the youtube video when I close the modal
-$('#myModal').on('hide.bs.modal', function (e) {
-    // a poor man's stop video
-    callPlayer('yt-player', 'stopVideo');
-}) 
 
-</script>
 
   {{ end }}
