--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -9,6 +9,7 @@ $greytwo: #626E6E;
 $palm: #445D31;
 $slate: #909999;
 $slate-tint: #9baba9;
+$sol: #DBA435;
 // Text
 $headings-color: $primary;
 $body-color: $primary;
