--- a/layouts/techs/single.html
+++ b/layouts/techs/single.html
@@ -1,260 +1,16 @@
 {{ define "main" }}
 
 
-  <!----------------HERO ------------------>
+{{ partial "hero.html" . }}
 
-  <section class="hero" id="home">
-    <div class="hero_background-svg">
-      <svg viewBox="0 0 1437 1180">
-        <path fill="#FFFFFF" d="M0 0h1377l60 1010a120 120 0 01-120 120L0 1180z" data-name="Path 1350" />
-      </svg>
-    </div>
-    <div class="hero_footer-svg">
-      <img src="/images/hero/figure-svg.svg" alt="" />
-    </div>
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-lg-6">
-          <div class="hero_content">
-            <div class="hero_blob">
-              <svg viewBox="0 0 550 550">
-                <defs>
-                  <linearGradient id="a" x1=".069" x2=".753" y1=".116" y2=".858" gradientUnits="objectBoundingBox">
-                    <stop offset="0" stop-color="#fff" />
-                    <stop offset="1" stop-color="#fff" stop-opacity=".012" />
-                  </linearGradient>
-                </defs>
-                <g data-name="blob-shape (3)">
-                  <path class="blob" fill="url(#a)"
-                    d="M455.4 151.1c43.1 36.7 73.4 92.8 60.8 136.3-12.7 43.5-68.1 74.4-111.3 119.4-43.1 45-74 104.1-109.8 109-35.9 5-76.7-44.2-111.8-89.2-35.2-45-64.7-85.8-70.8-132.6-6-46.8 11.6-99.6 46.7-136.3 35.2-36.6 88-57.2 142.4-58.8 54.5-1.7 110.6 15.6 153.8 52.2z" />
-                </g>
-              </svg>
-            </div>
-            <div class="mb-5">
-              <span class="top-title pre-line">{{ .Params.heroTitle }}</span>
-              {{ .Params.heroContent | markdownify }}
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-6">
-          <div class="hero_figure">
-            <div class="figure-svg">
-              <img src="/images/hero/figure-svg.svg" alt="figure-svg" />
-            </div>
-            <img src="{{ .Params.heroImage | absURL }}" alt="hero-image" style='
-                    -webkit-mask: url({{"images/hero/hero-mask-svg.png" | absURL }});
-                    -webkit-mask-repeat: no-repeat;
-                    -webkit-mask-size: contain;
-                    -webkit-mask-position: center center;
-                  ' />
- 
-            {{ if .Params.heroVideoURL }}
-            <div class="hero_figure-popup">
-              <div class="thumb">
-                <img src="{{ .Params.heroVideoThumb| absURL }}" alt="popup" />
-              </div>
-              <!--{{ .Params.heroVideoURL }}
-              <a href="" type="button" class="popup-button text-center big">
-              -->
-              <a type="button" class="popup-button text-center big" data-toggle="modal" data-src="{{ .Params.heroVideoURL }}" data-target="#myModal">
-                <svg xmlns="http://www.w3.org/2000/svg" width="21" height="24" viewBox="0 0 21 24">
-                  <path d="M17.961 10.264a2 2 0 010 3.473L2.992 22.29A2 2 0 010 20.554V3.446A2 2 0 012.992 1.71z"
-                    data-name="Polygon 4" />
-                </svg>
-            
-            </a>
-         
-            
-            {{ end }}
-           <!------- Video Modal
-            Upon clicking button, the video will be embedded in a custom modal window for both desktop and mobile devices.
-            The issue without this modal is that the video would redirect on mobile devices and have the cusotmer leave the website
-            ------------>
-          </div>
-          <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
-              <div class="modal-content">
-          
-                
-                <div id="yt-player" class="modal-body">
-          
-                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>        
-                  <!-- 16:9 aspect ratio -->
-                  <div   class="embed-responsive embed-responsive-16by9">
-                  <iframe class="embed-responsive-item" src="{{ .Params.heroVideoURL }}" id="video"  allowfullscreen="true" allowscriptaccess="always" allowautoplay="false" ></iframe>
-                  </div>
-                    
-                  
-                </div>
-          
-              </div>
-            </div>
-          </div> 
-        </div>
-      </div>
-    </div>
-  </section>
+  {{ partial "slider.html" . }}
 
-  <!--------------- Products ---------------------->
-
-  <section class="section resume" id="resume">
-    <div class="resume__background"></div>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-6">
-                <div class="resume__heading">
-                    <div class="text-light">
-                        <span class="top-title pre-line">{{ .Params.offerTopTitle }}</span>
-                        {{ .Params.offerTitle | markdownify }}
-                    </div>
-
-                    <div class="btn-group nav mt-5">
-                        <a href="#automation" class="btn btn-primary active" data-toggle="tab">Automation</a>
-                        <a href="#security" class="btn btn-primary" data-toggle="tab">Security</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-6">
-                <div class="tab-content ">
-                    <div class="resume__education tab-pane active" id="automation">
-                        {{ $Section := .Params.automation }}
-                        {{ range $Section }}
-                        <div class="resume__education_item">
-                            <!-- <span class="pre-line text-primary"> {{ .Params.time }} </span> -->
-                            {{ .content | markdownify }}
-                        </div>
-                        {{ end }}
-
-                    </div>
-
-                    <div class="resume__education tab-pane" id="security">
-                        {{ $Section := .Params.security }}
-                        {{ range $Section }}
-                        <div class="resume__education_item">
-                           <!--- <span class="pre-line text-primary"> {{ .Params.time }} </span> -->
-                            {{ .content | markdownify }}
-                        </div>
-                        {{ end }}
-                    </div>
-
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
+  {{ partial "products.html" . }}
 
 
-  <!-----------------FOOTER   ---------------->
-  <section class="footer" id="contact">
-    <div class="footer__background_shape">
-      <svg viewBox="0 0 1920 79">
-        <path d="M0 0h1920v79L0 0z" data-name="Path 1450" />
-      </svg>
-    </div>
-    <div class="container">
-      
-      <div class="row">
-        
-        <div class="col-lg-12">
-          
-          
-          
-          <div class="footer__cta">
 
-            <form class="contact-form" id="contact-form"  method="POST">
-              <div class="row justify-content-center">
-                  <div class="form-field col-sm">
-                      <input id="name" class="input-text js-input" placeholder=" " name="name" type="text" required>
-                      <label class="label" for="name">Name*</label>
-                  </div>
-                  <div class="form-field col-sm">
-                      <input id="email" class="input-text js-input" placeholder=" " name="email" type="email" required>
-                      <label class="label" for="email">E-mail*</label>
-                     
-                  </div>
-                  <div class="form-field col-sm">
-                      <input id="phoneNumber" class="input-text js-input" placeholder=" " name="phone" type="tel" minlength="10" maxlength="12" required>
-                      <label class="label" for="phone">Phone*</label>
-                      
-                  </div>
-                  <!-- <div class="g-recaptcha" data-sitekey="6Lec2_gnAAAAAAtP3YgwYG_jG_Sf_FTBA5Dm_vOW"></div> -->
-                  <div class="form-field col-lg-12">
-                      <input id="formspark-url" value="{{ .Params.formsparkURL }}"  type="hidden">
-                      <button id="send-button" class="submit-btn" type="submit" formtarget="_self">Submit</button>
-                      <p id="contact-form-status" class="mt-3" style="display: none;">Form Submitted</p>
-                      
-                  </div>
-              </div>
-          </form>
-           
-  
-          
-            <div class="shape-1">
-              
-              <svg xmlns="http://www.w3.org/2000/svg" width="357" height="315.029" viewBox="0 0 357 315.029">
-                <path data-name="Path 1449"
-                  d="M76.1-157.222C91.746-135.8 87.2-94.273 99.993-61.945c12.7 32.328 42.661 55.459 39.248 73.282-3.318 17.823-40.007 30.337-65.6 43.325-25.5 12.988-39.912 26.545-60.01 42.566-20.1 16.116-46.074 34.6-63.328 27.682-17.349-6.921-25.976-39.153-59.915-59.82s-93.1-29.768-105.325-51.478 22.373-56.028 43.609-93.949c21.331-37.921 29.2-79.35 53.563-96.793 24.459-17.444 65.414-10.9 103.9-6.921 38.396 3.982 74.326 5.404 89.965 26.829z"
-                  transform="translate(217.489 188.626)" />
-              </svg>
-            </div>
-            <div class="shape-2">
-              <svg xmlns="http://www.w3.org/2000/svg" width="357" height="315.029" viewBox="0 0 357 315.029">
-                <path data-name="Path 1449"
-                  d="M76.1-157.222C91.746-135.8 87.2-94.273 99.993-61.945c12.7 32.328 42.661 55.459 39.248 73.282-3.318 17.823-40.007 30.337-65.6 43.325-25.5 12.988-39.912 26.545-60.01 42.566-20.1 16.116-46.074 34.6-63.328 27.682-17.349-6.921-25.976-39.153-59.915-59.82s-93.1-29.768-105.325-51.478 22.373-56.028 43.609-93.949c21.331-37.921 29.2-79.35 53.563-96.793 24.459-17.444 65.414-10.9 103.9-6.921 38.396 3.982 74.326 5.404 89.965 26.829z"
-                  transform="translate(217.489 188.626)" />
-              </svg>
-            </div>
-            
-  
-          </div>
-        </div>
-      </div>
-      <div class="row footer__widget">
-        <div class="col-lg-4">
-          <div class="footer__widget_logo mb-5">
-            <img src="/images/logos/nav-logo-white.webp" alt="widget-logo">
-          </div>
-        </div>
-        
-        <div class="col-lg-4">
-          <div class="text-light footer__widget_address mb-5">
-            <h4 class="base-font">Contact Me</h4>
-            {{ $address := .Site.Params.address }}
-            <ul class="fa-ul small">
-              <li class="mb-2"><a class="text-light" href="tel:{{ $address.phone }}"><span class="fa-li"><i
-                      class="fa fa-phone"></i></span>{{ $address.phone }}</a></li>
-              <li class="mb-2"><a class="text-light" href="mailto:{{ $address.email }}"><span class="fa-li"><i
-                      class="fa fa-envelope"></i></span>{{ $address.email }}</a></li>
-              <li class="mb-2">
-                <span class="fa-li"><i class="fa fa-map-marker"></i></span>{{ $address.address }}</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="row footer__footer">
-        <div class="col-lg-6">
-          <div class="footer__footer_copy text-light">
-            <p>Copyright {{ dateFormat "2006" now }} - All Rights Reserved <a class="text-light" href="https://staticmania.com/" target="_blank"></a></p>
-          </div>
-        </div>
-        <div class="col-lg-6">
-          <div class="footer__footer_social">
-            <ul class="unstyle-list">
-              {{ $social := .Site.Params.social }}
-              {{ range $social }}
-              <li class="d-inline-block mx-2"><a class="text-light" target="_blank" href="{{ .url }}"><i
-                    class="fa {{ .icon }}"></i></a>
-              </li>
-              {{ end }}
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+ {{ partial "footer.html" . }}
+
 
 
 
