fix error color

--- a/assets/scss/components/_contact.scss
+++ b/assets/scss/components/_contact.scss
@@ -52,7 +52,7 @@
           
 }
 .input-text.invalid-input {
-  border-color: red; /* Change border color to red for invalid fields */
+  border-color: #B75334; /* Change border color to red for invalid fields */
   /* You can add more styling to indicate the error visually */
 }
 
