advanced toggle, tina config

--- a/assets/scss/components/_footer-section.scss
+++ b/assets/scss/components/_footer-section.scss
@@ -159,3 +159,11 @@
         transform: translateX(15px) rotate(-20deg);
     }
 }
+
+
+.amigo{
+        
+    height:1300px;
+    width:100%;
+ }
+        
