--- a/assets/scss/components/_slider.scss
+++ b/assets/scss/components/_slider.scss
@@ -4,7 +4,7 @@
     overflow: hidden;
     justify-content: center;
     align-items: center;
-    
+    margin-bottom: 70px;
 
 }
   
@@ -18,6 +18,7 @@
   
   .logo-carousel {
     overflow: inherit;
+    
     
     
    
