--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,10 @@
 <section class="footer" id="contact">
+  {{ if not .Params.advanced }}
+
+    {{ partial "amigo.html" . }}
+
+    {{ end }}
+
   <div class="footer__background_shape">
     <svg viewBox="0 0 1920 79">
       <path d="M0 0h1920v79L0 0z" data-name="Path 1450" />
@@ -6,60 +12,17 @@
   </div>
   <div class="container">
     
+    
     <div class="row">
+     
       
       <div class="col-lg-12">
+        {{ if  .Params.advanced }}
         
-        
-        
-        <div class="footer__cta">
+        {{partial "form.html" .}}
 
-          <form class="contact-form" id="contact-form"  method="POST">
-            <div class="row justify-content-center">
-                <div class="form-field col-sm">
-                    <input id="name" class="input-text js-input" placeholder=" " name="name" type="text" required>
-                    <label class="label" for="name">Name*</label>
-                </div>
-                <div class="form-field col-sm">
-                    <input id="email" class="input-text js-input" placeholder=" " name="email" type="email" required>
-                    <label class="label" for="email">E-mail*</label>
-                   
-                </div>
-                <div class="form-field col-sm">
-                    <input id="phoneNumber" class="input-text js-input" placeholder=" " name="phone" type="tel" minlength="10" maxlength="12" required>
-                    <label class="label" for="phone">Phone*</label>
-                    
-                </div>
-                <!-- <div class="g-recaptcha" data-sitekey="6Lec2_gnAAAAAAtP3YgwYG_jG_Sf_FTBA5Dm_vOW"></div> -->
-                <div class="form-field col-lg-12">
-                    <input id="formspark-url" value="{{ .Params.formsparkURL }}"  type="hidden">
-                    <button id="send-button" class="submit-btn" type="submit" formtarget="_self">Submit</button>
-                    <p id="contact-form-status" class="mt-3" style="display: none;">Form Submitted</p>
-                    
-                </div>
-            </div>
-        </form>
-         
-
+        {{end}}
         
-          <div class="shape-1">
-            
-            <svg xmlns="http://www.w3.org/2000/svg" width="357" height="315.029" viewBox="0 0 357 315.029">
-              <path data-name="Path 1449"
-                d="M76.1-157.222C91.746-135.8 87.2-94.273 99.993-61.945c12.7 32.328 42.661 55.459 39.248 73.282-3.318 17.823-40.007 30.337-65.6 43.325-25.5 12.988-39.912 26.545-60.01 42.566-20.1 16.116-46.074 34.6-63.328 27.682-17.349-6.921-25.976-39.153-59.915-59.82s-93.1-29.768-105.325-51.478 22.373-56.028 43.609-93.949c21.331-37.921 29.2-79.35 53.563-96.793 24.459-17.444 65.414-10.9 103.9-6.921 38.396 3.982 74.326 5.404 89.965 26.829z"
-                transform="translate(217.489 188.626)" />
-            </svg>
-          </div>
-          <div class="shape-2">
-            <svg xmlns="http://www.w3.org/2000/svg" width="357" height="315.029" viewBox="0 0 357 315.029">
-              <path data-name="Path 1449"
-                d="M76.1-157.222C91.746-135.8 87.2-94.273 99.993-61.945c12.7 32.328 42.661 55.459 39.248 73.282-3.318 17.823-40.007 30.337-65.6 43.325-25.5 12.988-39.912 26.545-60.01 42.566-20.1 16.116-46.074 34.6-63.328 27.682-17.349-6.921-25.976-39.153-59.915-59.82s-93.1-29.768-105.325-51.478 22.373-56.028 43.609-93.949c21.331-37.921 29.2-79.35 53.563-96.793 24.459-17.444 65.414-10.9 103.9-6.921 38.396 3.982 74.326 5.404 89.965 26.829z"
-                transform="translate(217.489 188.626)" />
-            </svg>
-          </div>
-          
-
-        </div>
       </div>
     </div>
     <div class="row footer__widget">
