--- a/layouts/partials/products.html
+++ b/layouts/partials/products.html
@@ -4,6 +4,15 @@
     <div class="resume__background"></div>
     <div class="container">
         <div class="row">
+            {{ if  .Params.advanced }}
+
+                {{ partial "form.html" .}}
+
+            {{ end  }}
+    
+
+        </div>
+        <div class="row">
             <div class="col-lg-6">
                 <div class="resume__heading">
                     <div class="text-light">
