--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -24,14 +24,14 @@
   <link rel="icon" href="{{ "images/favicon.png" | absURL }}" type="image/x-icon" />
   {{ with site.Params.googleAnalytics }}
   {{ "<!-- Google Analytics -->" | safeHTML }}
-  <script async src="https://www.googletagmanager.com/gtag/js?id={{ . }}"></script>
   <script src="https://www.google.com/recaptcha/api.js" async></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-M9TJ7HTFWH"></script>
   <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-    gtag('config', '{{ . }}');
+  gtag('config', 'G-M9TJ7HTFWH');
   </script>
   <script src="https://www.youtube.com/iframe_api"></script>
   {{ end }}
