--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,7 +1,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="robots" content="all">
-  <title>{{ .Title }}</title>
+  <title>Vivint Dealer</title>
 
   {{ "<!-- mobile responsive meta -->" | safeHTML }}
   <meta name="viewport" content="width=device-width, initial-scale=1" />
