--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -1,3 +1,23 @@
+$breakpoints: (
+  mobile-xs : 400px,
+  mobile: 575px,
+  tablet : 820px, 
+  desktop: 991px,
+  desktop-lg: 1200px,
+  desktop-xl: 1400px,
+  desktop-4k: 2000px,
+);
+
+//  mixin to print out media queries (based on map keys passed) 
+@mixin media($keys...){
+  @each $key in $keys { 
+    @media (max-width: map-get($breakpoints, $key)){
+      @content
+    } 
+  }
+}
+
+
 @mixin mobile-s{
   @media(max-width:375px){
     @content;
