--- a/assets/scss/components/_service-section.scss
+++ b/assets/scss/components/_service-section.scss
@@ -7,11 +7,27 @@
         top: 0;
         right: 0;
         z-index: -1;
-        width: 61%;
+        width: 51%;
         svg {
             width: 100%;
             height: 100%;
         }
+        @include media(desktop) {
+            display:block;
+
+        }
+        @include media(tablet, mobile, mobile-s, mobile-xs){
+            display:none;
+        }
+    }
+    &__textContent{
+        
+            h4,p{
+                color: white;
+            }
+    
+        
+        
     }
     &__background_shape {
         position: absolute;
@@ -37,11 +53,16 @@
     }
     &__slider {
         &_item {
+            @include mobile{
+                box-shadow: 0px 20px 40px 0px rgba(20, 28, 28, 0.5);
+            }
+            @include media(desktop, tablet){
+                box-shadow: 0px 20px 40px 0px rgba(255, 255, 255, 0.2);
+            }
             margin: 15px;
             padding: 30px;
-            box-shadow: 0px 20px 40px 0px rgba(50, 65, 141, 0.12);
             border-radius: 20px;
-            background: $white;
+            background: $primary;
             &-icon {
                 height: 110px;
                 width: 125px;
@@ -56,6 +77,10 @@
                     left: 0;
                     bottom: 0;
                     z-index: 1;
+                    img{
+                        width: 70px;
+                        filter: brightness(0) invert(1);
+                    }
                 }
             }
         }
