--- a/layouts/partials/other/features.html
+++ b/layouts/partials/other/features.html
@@ -1,23 +1,22 @@
-{{ with .Site.Data.portfolioSection }}
-{{ if .enable }}
+
 <section class="section portfolio" id="portfolio">
   <div class="container">
     <div class="row text-center">
       <div class="col-lg-6 offset-lg-3">
         <div class="portfolio__header mb-5">
-          <span class="top-title">{{ .topTitle }}</span>
-          {{ .title | markdownify }}
+          <span class="top-title">{{ .Params.FeatureTopTitle }}</span>
+          {{ .Params.FeatureTitle | markdownify }}
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col-12">
         <div class="portfolio-item-grid">
-          {{ range (where $.Site.RegularPages "Type" "portfolio").Reverse }}
+          {{ range .Params.Features }}
           <div class="portfolio-item">
             <img src="{{ .Params.thumbnail }}" class="portfolio-item-thumb" alt="portfolio-thumb" />
             <div class="portfolio-item-content">
-              <span>{{ .Params.service }}</span>
+              <span>{{ .Params.featureTitle }}</span>
               <h3 class="mb-0">
                 <a class="text-dark" href="{{ .Permalink }}">{{ .Title }}</a>
               </h3>
@@ -30,5 +29,3 @@
     </div>
   </div>
 </section>
-{{ end }}
-{{ end }}
