--- a/layouts/techs/single.html
+++ b/layouts/techs/single.html
@@ -1,23 +1,14 @@
 {{ define "main" }}
 
 
-{{ partial "hero.html" . }}
+  {{ partial "hero.html" . }}
 
   {{ partial "slider.html" . }}
 
-
-
   {{ partial "products.html" . }}
 
+  {{ partial "serviceSection.html" . }}
 
+  {{ partial "footer.html" . }}
 
-
- {{ partial "footer.html" . }}
-
-
-
-
-
-
-
-  {{ end }}
+{{ end }}
