--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -26,14 +26,14 @@
   {{ with site.Params.googleAnalytics }}
   {{ "<!-- Google Analytics -->" | safeHTML }}
   <script src="https://www.google.com/recaptcha/api.js" async></script>
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-M9TJ7HTFWH"></script>
-  <script>
+ <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-M9TJ7HTFWH">
+</script>
+<script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   gtag('config', 'G-M9TJ7HTFWH');
-  </script>
-  <script src="https://www.youtube.com/iframe_api"></script>
-  {{ end }}
+</script>
 </head>
