--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,6 +1,6 @@
 <head>
   <meta charset="utf-8" />
-  <meta name="robots" content="all">
+  <meta name="robots" content="all" />
   <title>Vivint Dealer</title>
 
   {{ "<!-- mobile responsive meta -->" | safeHTML }}
