--- a/layouts/partners/single.html
+++ b/layouts/partners/single.html
@@ -5,10 +5,10 @@
 
   {{ partial "slider.html" . }}
 
-  {{ partial "products.html" . }}
+  {{ partial "products-partner.html" . }}
 
   {{ partial "serviceSection.html" . }}
 
-  {{ partial "footer.html" . }}
+  {{ partial "footer-partner.html" . }}
 
 {{ end }}
